--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,10 @@ project(FoggyEngine VERSION 0.1.0)
 find_package(SFML 2 COMPONENTS audio graphics window system network)
 find_package(box2d REQUIRED)
 
-add_executable(foggy src/main.cpp src/Game.cpp)
+add_executable(foggy 
+    src/main.cpp src/Game.cpp 
+    src/Entity.cpp src/GameWorld.cpp
+    src/RectangleEntity.cpp)
 
 target_link_libraries(foggy PUBLIC sfml-audio sfml-graphics sfml-window sfml-system sfml-network box2d)
 target_compile_options(foggy PUBLIC -Wall -Wextra -Wundef -pedantic)
