--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,14 @@ project(FoggyEngine VERSION 0.1.0)
 find_package(SFML 2 COMPONENTS audio graphics window system network)
 find_package(box2d REQUIRED)
 
-add_executable(foggy 
-    src/main.cpp src/Game.cpp 
-    src/Entity.cpp src/GameWorld.cpp
-    src/RectangleEntity.cpp src/CircleEntity.cpp)
+set(Engine_Src 
+    Engine/src/GameWorld.cpp
+    Engine/Entity/src/Entity.cpp
+    Engine/Entity/src/RectangleEntity.cpp Engine/Entity/src/CircleEntity.cpp)
+
+add_executable(foggy ${Engine_Src} Game/src/main.cpp Game/src/Game.cpp)
 
 target_link_libraries(foggy PUBLIC sfml-audio sfml-graphics sfml-window sfml-system sfml-network box2d)
 target_compile_options(foggy PUBLIC -Wall -Wextra -Wundef -pedantic)
-target_include_directories(foggy PUBLIC include)
+target_include_directories(foggy PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} Game Engine Engine/Entity Engine/util)
 
