--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,12 @@ find_package(box2d REQUIRED)
 set(Engine_Src 
     Engine/src/GameWorld.cpp
     Engine/Entity/src/Entity.cpp
-    Engine/Entity/src/RectangleEntity.cpp Engine/Entity/src/CircleEntity.cpp)
+    Engine/Entity/src/RectangleEntity.cpp Engine/Entity/src/CircleEntity.cpp
+    Engine/ActionSystem/src/Action.cpp)
 
-add_executable(foggy ${Engine_Src} Game/src/main.cpp Game/src/Game.cpp)
+add_executable(foggy ${Engine_Src} Game/src/main.cpp Game/src/Game.cpp Game/src/Player.cpp)
 
 target_link_libraries(foggy PUBLIC sfml-audio sfml-graphics sfml-window sfml-system sfml-network box2d)
 target_compile_options(foggy PUBLIC -Wall -Wextra -Wundef -pedantic)
-target_include_directories(foggy PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} Game Engine Engine/Entity Engine/util)
+target_include_directories(foggy PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} Game Engine )
 
