- GameWorld to World

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ find_package(SFML 2 COMPONENTS audio graphics window system network)
 find_package(box2d REQUIRED)
 
 set(Engine_Src 
-    Engine/src/GameWorld.cpp
+    Engine/World/src/World.cpp
     Engine/Entity/src/Entity.cpp
     Engine/Entity/src/RectangleEntity.cpp Engine/Entity/src/CircleEntity.cpp
     Engine/ActionSystem/src/Action.cpp)
@@ -15,5 +15,5 @@ add_executable(foggy ${Engine_Src} Game/src/main.cpp Game/src/Game.cpp Game/src/
 
 target_link_libraries(foggy PUBLIC sfml-audio sfml-graphics sfml-window sfml-system sfml-network box2d)
 target_compile_options(foggy PUBLIC -Wall -Wextra -Wundef -pedantic)
-target_include_directories(foggy PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} Game Engine )
+target_include_directories(foggy PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} Game Engine)
 
