--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(Engine_Src ${Utils_Src}
     Engine/Camera/src/Camera.cpp
     Engine/EntitySystem/Entities/src/Entity.cpp
     Engine/EntitySystem/Components/src/Collision.cpp
+    Engine/EntitySystem/Components/src/Transform.cpp
     Engine/EntitySystem/Systems/src/CollisionSystem.cpp
     Engine/TimerSystem/src/TimerSystem.cpp)
 
