--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,9 +25,10 @@ set(Engine_Src ${Utils_Src} ${ES_Src} ${Animation_Src}
 
 add_executable(foggy 
     ${Engine_Src} Game/src/main.cpp Game/src/Game.cpp 
-     Game/Configuration/src/Configuration.cpp
-     Game/src/Player.cpp
-    Game/src/HealthSystem.cpp)
+    Game/Configuration/src/Configuration.cpp
+    Game/Player/Animator/src/PlayerAnimator.cpp
+    Game/Player/src/Player.cpp
+    Game/Systems/src/HealthSystem.cpp)
 
 target_link_libraries(foggy PUBLIC sfml-audio sfml-graphics sfml-window sfml-system sfml-network box2d)
 target_compile_options(foggy PUBLIC -Wall -Wextra -Wundef -pedantic)
