* update cmakelists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,8 @@ set(ES_Src
 
 set(GUI_Src
     Engine/GUI/src/Widget.cpp Engine/GUI/src/Label.cpp
-    Engine/GUI/src/Button.cpp)
+    Engine/GUI/src/Button.cpp Engine/GUI/src/Frame.cpp
+    Engine/GUI/src/Container.cpp Engine/GUI/src/Label.cpp)
 
 set(Engine_Src ${Utils_Src} ${ES_Src} ${Animation_Src} ${GUI_Src}
     Engine/ActionSystem/src/Action.cpp
