--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,10 @@ find_package(Lua REQUIRED)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(JSONCPP jsoncpp)
 
-set(Utils_Src
-    Engine/util/src/Memory.cpp)
+set(Utils_Src Engine/util/src/Memory.cpp)
 
-set(Animation_Src
-    Engine/AnimationSystem/src/Animation.cpp
-    Engine/AnimationSystem/src/AnimatedSprite.cpp)
+set(Animation_Src Engine/AnimationSystem/src/Animation.cpp
+                  Engine/AnimationSystem/src/AnimatedSprite.cpp)
 
 set(ES_Src
     Engine/EntitySystem/Entities/src/Entity.cpp
@@ -25,18 +23,12 @@ set(ES_Src
     Engine/EntitySystem/Systems/src/SkinSystem.cpp)
 
 set(GUI_Src
-    Engine/GUI/src/Widget.cpp
-    Engine/GUI/src/Label.cpp
-    Engine/GUI/src/Button.cpp
-    Engine/GUI/src/Frame.cpp
-    Engine/GUI/src/Container.cpp
-    Engine/GUI/src/Layout.cpp)
+    Engine/GUI/src/Widget.cpp Engine/GUI/src/Label.cpp
+    Engine/GUI/src/Button.cpp Engine/GUI/src/Frame.cpp
+    Engine/GUI/src/Container.cpp Engine/GUI/src/Layout.cpp)
 
-set(TileMap_Src
-    Engine/TileMap/src/VLayer.cpp
-    Engine/TileMap/src/VMap.cpp
-    Engine/TileMap/src/Square.cpp
-    Engine/TileMap/src/MapViewer.cpp)
+set(TileMap_Src Engine/TileMap/src/VLayer.cpp Engine/TileMap/src/VMap.cpp
+                Engine/TileMap/src/Square.cpp Engine/TileMap/src/MapViewer.cpp)
 
 set(Engine_Src
     ${Utils_Src}
@@ -49,21 +41,23 @@ set(Engine_Src
     Engine/Camera/src/Camera.cpp
     Engine/TimerSystem/src/TimerSystem.cpp)
 
-add_executable(foggy
-    ${Engine_Src}
-    Game/src/main.cpp
-    Game/src/Game.cpp
-    Game/Configuration/src/Configuration.cpp
-    Game/Player/src/Player.cpp
+add_executable(
+    foggy
+    ${Engine_Src} Game/src/main.cpp Game/src/Game.cpp
+    Game/Configuration/src/Configuration.cpp Game/Player/src/Player.cpp
     Game/Systems/src/HealthSystem.cpp)
 
-target_link_libraries(foggy PUBLIC
-    sfml-audio sfml-graphics sfml-window sfml-system sfml-network
-    box2d
-    ${LUA_LIBRARIES}
-    ${JSONCPP_LIBRARIES})
+target_link_libraries(
+    foggy
+    PUBLIC sfml-audio
+           sfml-graphics
+           sfml-window
+           sfml-system
+           sfml-network
+           box2d
+           ${LUA_LIBRARIES}
+           ${JSONCPP_LIBRARIES})
 
 target_include_directories(foggy PUBLIC Game Engine ${LUA_INCLUDE_DIR})
 
 target_compile_options(foggy PUBLIC -Wall -Wextra -Wundef -pedantic -std=c++17)
-
